[package]
name = "bleasy"
version = "0.2.1"
edition = "2021"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]

description = "High-level BLE communication library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/urholaukkarinen/bleasy"
homepage = "https://github.com/urholaukkarinen/bleasy"
keywords = ["ble"]
categories = ["asynchronous", "hardware-support"]

[dependencies]
tokio = { version = "1.17.0", features = ["rt"] }
tokio-stream = "0.1.8"
log = "0.4.14"
futures = "0.3.21"
uuid = "0.8.2"
thiserror = "1.0.31"
stream-cancel = "0.8.1"
btleplug = "0.9.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }