[package]
name = "bleasy"
version = "0.3.1"
edition = "2021"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]

description = "High-level BLE communication library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/urholaukkarinen/bleasy"
homepage = "https://github.com/urholaukkarinen/bleasy"
keywords = ["bluetooth", "ble"]
categories = ["asynchronous", "hardware-support"]

[dependencies]
tokio = { version = "1.35.1", features = ["rt"] }
tokio-stream = "0.1.14"
log = "0.4.14"
futures = "0.3.21"
uuid = "1.7.0"
thiserror = "1.0.31"
stream-cancel = "0.8.1"
btleplug = "0.11.5"

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
